[JAVA-22519] Moved article "Key Value Store with Chronicle Map" to libraries-data-3